# ui/desktop/openapi.json
@@ -8944,6 +8944,10 @@
               "type": "string"
             }
           },
+          "preserves_thinking": {
+            "type": "boolean",
+            "nullable": true
+          },
           "requires_auth": {
             "type": "boolean"
           },
